--- a/etc/salt/master.d/roots.conf
+++ b/etc/salt/master.d/roots.conf
@@ -9,4 +9,15 @@ pillar_roots:
     - /srv/salt/pillars/base
   dev:
     - /srv/salt/pillars/dev
+
+pillar_cache: True
+pillar_cache_ttl: 1
+
 master: localhost
+
+runners:
+  net.find::
+    target:  '*'
+  ignore_interfaces:
+    - lo0
+  outputter: yaml
